# aoc

./: .gitignore  README.md
2023/: CMakeLists.txt
2023/src/: main.cpp
2023/src/aoc/: day_1.cpp  day_1_1.cpp  day_1_2.cpp  day_2.cpp  day_2_1.cpp  day_2_2.cpp  day_3_1.cpp  day_3_2.cpp  day_4_1.cpp  day_4_2.cpp  day_5_1.cpp  day_5_2.cpp  solution_1_1.cpp  solution_1_2.cpp
2023/src/hell/: common.h
